# ethereum-bootcamp-rust-edition

./: Cargo.toml  README.md
src/: lib.rs  utils.rs  week_1.rs  week_2.rs  week_3.rs  week_4.rs  week_5.rs  week_6.rs  week_7.rs
src/week_1/: blockchain_network.rs  digital_signatures.rs  proof_of_work.rs  the_first_primitives.rs
src/week_2/: binary_search_tree.rs  merkle_tree.rs  trie.rs  utxo_model.rs
src/week_3/: intro_to_ethers.rs  json_rpc.rs  json_rpc_read_request.rs  testing_utils.rs  where_is_the_ether.rs
src/week_4/: basic_data_types.rs  contract_interaction.rs  deploy_contract_with_ethers.rs  how_to_modify_state.rs  how_to_unit_test_a_smart_contract.rs  learning_revert.rs  practice_solidity.rs  sending_data.rs  sending_ether.rs  solidity_functions.rs  winner.rs
src/week_4/contracts/: ArbitraryAlert.sol  Arguments.sol  Booleans.sol  CallFunction.sol  ConstructorRevert.sol  Countdown.sol  Deposit.sol  Enum.sol  Fallback.sol  Faucet.sol  FunctionSignature.sol  Getter.sol  ModifyState.sol  OwnerModifier.sol  PureDouble.sol  SendingEther.sol  Setter.sol  SignedIntegers.sol  Signer.sol  StringLiterals.sol  SumAndAverage.sol  Transfer.sol  UnitTestFaucet.sol  UnsignedIntegers.sol  Winner.sol  WithSignature.sol
src/week_5/: arrays.rs  contract_puzzles.rs  escrow.rs  events.rs  local_hardhat_games.rs  mappings.rs  structs.rs
src/week_5/contracts/: AddMember.sol  Arrays.sol  Escrow.sol  (+7 more)
src/week_6/: dead_man_switch.rs  erc_20.rs  hackaton.rs  inheritance.rs  multi_signature_wallet.rs  party_split.rs  plunder.rs
src/week_7/: libraries.rs  voting_contract.rs
(+9 files in other folders)
