[package]
name = "ethereum-bootcamp-rust-edition"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.11.6", features = ["ecdsa", "keccak256"] }
sha2 = "0.10.6"
sha3 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
ethers = { version = "1.0.2", features = ["solc-tests"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros"] }
